--- a/src/app/root.less
+++ b/src/app/root.less
@@ -26,6 +26,11 @@
     --screentabs-font-weight: 300;
     --screentabs-selected-font-weight: 300;
 
+    // floating logo settings
+    --floating-logo-width-darwin: 110px;
+    --floating-logo-width: 40px;
+    --floating-logo-height: var(--screentabs-height);
+
     // global colors
     --app-accent-color: rgb(88, 193, 66);
     --app-error-color: rgb(204, 0, 0);
